--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <p id="small">あなたが世界で最高の服を見つける偽のブランドへようこそ、ブランド名を盗まないでください。</p>
         <button id="dark" onclick="wallChange()"></button>
     </div>
-    <script src="/script.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
