--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet">
     <!-- MDB -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.css" rel="stylesheet">
+    <link rel="shortcut icon" href="fa.png" type="image/x-icon">
     <title>SCH</title>
 </head>
 
@@ -28,7 +29,9 @@
         </div>
         <h1 id="big">Lormenia SV</h1>
         <p id="small">あなたが世界で最高の服を見つける偽のブランドへようこそ、ブランド名を盗まないでください。</p>
-        <button id="dark" onclick="wallChange()"></button>
+        <div id="slide">
+            <button id="dark" onclick="wallChange()" class="dark changeA"></button>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
