change html and style

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <h1 id="big">Lormenia SV</h1>
         <p id="small">あなたが世界で最高の服を見つける偽のブランドへようこそ、ブランド名を盗まないでください。</p>
         <div id="slide">
-            <button id="dark" onclick="wallChange()" class="dark changeA"></button>
+            <div id="dark" onclick="wallChange()" class="dark changeA"></div>
         </div>
     </div>
     <script src="script.js"></script>
