--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <div id="timer">
             <h1 id="time"></h1>
         </div>
-        <i class="fas fa-bars"></i>
-        <div id="nav">
+        <i class="fas fa-bars" onclick="navClose()" id="navS"></i>
+        <div id="nav" class="navShow">
             <p id="navt">Designed by ibra</p>
             <a href="https://facebook.com" class="fab fa-facebook-f" id="facebook"></a>
             <a href="https://github.com/" class="fab fa-github" id="github"></a>
